# cmake-sfml-project

./: .gitignore  CMakeLists.txt
resources/game_file/: ResourcesUtil.cpp
src/: MenuScene.cpp  Scene.cpp  main.cpp
src/Player/: PeashooterPlayer.cpp  Player.cpp  SunflowerPlayer.cpp
src/ResourcesUnit/: Animation.cpp  Atlas.cpp  ResourcesUtils.cpp  SoundManager.cpp
src/Scene/: GameScene.cpp  MenuScene.cpp  Scene.cpp  SceneManager.cpp  SelectorScene.cpp
src/Util/: Camera.cpp  MainDrawUtil.cpp  Platform.cpp  Timer.cpp
src/include/Player/: PeashooterPlayer.cpp  PeashooterPlayer.h  Player.cpp  Player.h  PlayerID.h  SunflowerPlayer.cpp  SunflowerPlayer.h
src/include/ResourcesUnit/: Animation.h  Atlas.h  ResourcesUtil.h  SoundManager.cpp  SoundManager.h
src/include/Scene/: GameScene.h  MenuScene.h  Scene.h  SceneManager.h  SelectorScene.h
src/include/Util/: Camera.h  MainDrawUtil.h  Platform.h  Timer.h
